--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.10",
     "@tailwindcss/vite": "^4.1.18",
     "motion": "^12.23.26",
     "react": "^19.2.0",
